# boilchangeip

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES_v2.0.1.md  RELEASE_NOTES_v2.0.2.md  change-ip.sh  config.env.example  install-common.sh  install.sh  tg-bot.sh  uninstall.sh  update.sh
.github/workflows/: release.yml
docs/releases/: v2.1.0.md  v2.1.1.md  v2.1.2.md
docs/tasks/: v2.0.1.md
scripts/: release.sh
src/: boil.rs  bot.rs  cli.rs  config.rs  core.rs  main.rs  reconnect.rs  server_manage.rs  service.rs  status_card.rs  streaming.rs  timer.rs
src/bot/: callbacks.rs  change.rs  commands.rs  formatting.rs  mod.rs  pairing.rs  server_delete.rs  server_edit.rs  server_list.rs  server_wizard.rs  state.rs  status.rs  timer_ui.rs
