[package]
name = "boil"
version = "2.1.0"
edition = "2021"

[[bin]]
name = "boil"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1",    features = ["full"] }
reqwest     = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
dotenvy     = "0.15"
teloxide    = { version = "0.12", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
anyhow                  = "1"
clap                    = { version = "4", features = ["derive"] }
dialoguer               = "0.11"
env_logger              = "0.11"
log                     = "0.4"
tokio-cron-scheduler    = "0.13"
chrono-tz               = "0.10"
uuid                    = "1"
rand                    = "0.8"
image                   = { version = "0.25", default-features = false, features = ["png"] }
ab_glyph                = "0.2"

[profile.release]
opt-level     = "z"
lto           = true
codegen-units = 1
strip         = true
